<resources>
    <string name="app_name">Alias</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="second_page">Second Activity</string>

    <string name="title_activity_start">StartActivity</string>
    <string name="start_new_game">Нова гра</string>
    <string name="start_rules">Правила</string>
    <string name="start_exit">Вийти</string>
    <string name="start_version">v.</string>
    <string name="start_continue">Продовжити</string>
    <string name="start_dialog_yes">Так</string>
    <string name="start_dialog_no">Ні</string>
    <string name="start_continue_dialog_title">Нова гра</string>
    <string name="start_continue_dialog_message">Ви дійсно бажаєте почату нову гру?</string>
    <string name="start_exit_dialog_title">Вихід з гри</string>
    <string name="start_exit_dialog_message">Ви дійсно бажаєте вийти з гри?</string>

    <string name="title_activity_team">TeamActivity</string>
    <string name="team_teams">Команди:</string>
    <string name="team_next">Далі</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_time">Час на раунд:</string>
    <string name="settings_points">Кількість слів:</string>
    <string name="settings_level">Рівень складності слів:</string>
    <string name="settings_next">Далі</string>
    <string-array name="array_levels">
        <item>Початковий</item>
        <item>Середній</item>
    </string-array>

    <string name="title_activity_results">ResultsActivity</string>
    <string name="results_button_start">Старт</string>
    <string name="results_text_results">Результати:</string>
    <string name="results_text_next_team">"Наступна команда: "</string>
    <string name="results_text_round">"Раунд: "</string>

    <string name="title_activity_game">GameActivity</string>
    <string name="game_text_minus">-</string>
    <string name="game_text_plus">+</string>

    <string name="title_activity_round">RoundActivity</string>
    <string name="round_label">Результати за раунд:</string>
    <string name="round_points_label">"Кількість очок: "</string>
    <string name="round_next_button">Далі</string>

    <string name="title_activity_win">WinActivity</string>
    <string name="win_winner_label">"Переможець: "</string>
    <string name="win_button_to_menu">В меню</string>
    <string name="win_button_return_match">Реванш</string>

    <string name="title_activity_rules">RulesActivity</string>
    <string name="rules_text">Правила гри\nДошка в Alias — «шлях», що складається з послідовних номерів на червоному тлі. Гра містить 8 пронумерованих груп. Гра ділиться на «черги» близько хвилини довжиною. Команди грають по черзі, а на черзі кожної команди, один з членів команди повинен пояснити слова на картках іншим членам команди. Інші члени команди мають вгадати слова, і за правильно вгадані команда заробляє одне очко за слово. Пояснення помилки (мається на увазі пояснення, де використовуєть пояснюване слово, частина його, або похідну від нього), і невгадані слова віднімають очки. Гравці пояснюють ті слова з картки, на якому номері на полі вони зупинились. Якщо, наприклад, команда приземляється на число 7, повинні пояснюватись слова номер 7 з кожної картки. Перша команда, що прийшла до фінішу, є переможцем. Гра рекомендується для гравців старше 7 років.</string>
    <string name="rules_back_to_menu">В меню</string>


</resources>
